--- a/Assignment2_supervised_learning_flow.ipynb
+++ b/Assignment2_supervised_learning_flow.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pandas Modules\n",
+    "# ML Modules\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
